--- a/haile.html
+++ b/haile.html
@@ -6,6 +6,6 @@
     <title>Haileyesus_Tulu</title>
 </head>
 <body>
-    
+<p>fork the project, adding new branch and send a pull request.</p>    
 </body>
 </html>
